Updated readme versions

--- a/todoApp.html
+++ b/todoApp.html
@@ -9,8 +9,10 @@
 	<button>Display todos</button>
 	<input type="text">
 
-	<script src="Version2-functions.js"></script>
+<!-- 	<script src="Version3-objects.js"></script>
+ -->
 <!-- 	<script src="Version2-functions.js"></script>
- -->	<!-- <script src="Version2-functions.js"></script> -->
+ -->	<!-- <script src="Version4-boolean.js"></script> -->
+ <script src="Version5-loopOf-logic.js"></script>
 </body>
 </html>
