Updates in App Requirements document

--- a/todoApp.html
+++ b/todoApp.html
@@ -6,13 +6,22 @@
 </head>
 <body>
 	<h1>Todo List</h1>
-	<button>Display todos</button>
-	<input type="text">
+	<div>
+		<button onclick="handlers.displayTodos()">Display todos</button>
+		<button onclick="handlers.toggleAll()">Toggle All</button>
+	</div>
+	
+	<div>
+		<button onclick="handlers.addTodos()">Add</button>
+		<input id="addTodoTextInput"  type="text">
+	</div>
 
 <!-- 	<script src="Version3-objects.js"></script>
  -->
 <!-- 	<script src="Version2-functions.js"></script>
  -->	<!-- <script src="Version4-boolean.js"></script> -->
- <script src="Version5-loopOf-logic.js"></script>
+<!--  <script src="Version5-loopOf-logic.js"></script>
+ --> <!-- <script src="Version6-thinking-in-code.js"></script> -->
+ <script src="Version7-buttons-refactoring.js"></script>
 </body>
 </html>
