--- a/todoApp.html
+++ b/todoApp.html
@@ -15,6 +15,15 @@
 		<button onclick="handlers.addTodos()">Add</button>
 		<input id="addTodoTextInput"  type="text">
 	</div>
+	<div>
+		<button onclick="handlers.changeTodos()">Change</button>
+		<input type="number" id="changeTodosPositionInput">
+		<input type="text" id="changeTodosTextInput">
+	</div>
+	<div>
+		<button onclick="handlers.deleteTodos()">Delete</button>
+		<input type="number" id="deleteTodosPositionInput">
+	</div>
 
 <!-- 	<script src="Version3-objects.js"></script>
  -->
