Escape from console creating new view obj to handle user displays also replacing displayTodos()

--- a/todoApp.html
+++ b/todoApp.html
@@ -7,7 +7,6 @@
 <body>
 	<h1>Todo List</h1>
 	<div>
-		<button onclick="handlers.displayTodos()">Display todos</button>
 		<button onclick="handlers.toggleAll()">Toggle All</button>
 	</div>
 	
@@ -24,13 +23,15 @@
 		<button onclick="handlers.deleteTodos()">Delete</button>
 		<input type="number" id="deleteTodosPositionInput">
 	</div>
+	<div>
+		<button onclick="handlers.toggleCompleted()">Toggle Completed</button>
+		<input type="number" id="toggleCompletedTextInput">
+	</div>
 
-<!-- 	<script src="Version3-objects.js"></script>
- -->
-<!-- 	<script src="Version2-functions.js"></script>
- -->	<!-- <script src="Version4-boolean.js"></script> -->
-<!--  <script src="Version5-loopOf-logic.js"></script>
- --> <!-- <script src="Version6-thinking-in-code.js"></script> -->
- <script src="Version7-buttons-refactoring.js"></script>
+	<ul>
+		
+	</ul>
+
+ <script src="Version9-Escape-from-console.js"></script>
 </body>
 </html>
