--- a/Version10-Click-to-delete.html
+++ b/Version10-Click-to-delete.html
@@ -1,12 +1,45 @@
-// Version 10- Click to delete
-// •	The ‘return’ statement
-// •	Requirements
-// •	There should be a way to create delete buttons
-// •	There should be a delete buttons for each todo
-// •	Each li should have a id that has the todo position
-// •	Delete buttons should have access to the todo id
-// •	Clicking delete should update todoList.todos and the DOM
-// •	Cleanup and Review
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>todo App</title>
+</head>
+<body>
+  <h1>Todo List</h1>
+  <div>
+    <button onclick="handlers.toggleAll()">Toggle All</button>
+  </div>
+  
+  <div>
+    <button onclick="handlers.addTodos()">Add</button>
+    <input id="addTodoTextInput"  type="text">
+  </div>
+  <div>
+    <button onclick="handlers.changeTodos()">Change</button>
+    <input type="number" id="changeTodosPositionInput">
+    <input type="text" id="changeTodosTextInput">
+  </div>
+  
+  <div>
+    <button onclick="handlers.toggleCompleted()">Toggle Completed</button>
+    <input type="number" id="toggleCompletedTextInput">
+  </div>
+
+  <ul>
+    
+  </ul>
+
+ <script>
+ // Version 10- Click to delete
+// •  The ‘return’ statement
+// •  Requirements
+// •  There should be a way to create delete buttons
+// •  There should be a delete buttons for each todo
+// •  Each li should have a id that has the todo position
+// •  Delete buttons should have access to the todo id
+// •  Clicking delete should update todoList.todos and the DOM
+// •  Cleanup and Review
 
 var todoList = {
   todos: [], 
@@ -86,55 +119,62 @@ var handlers = {
 
 };
 
-// •	Requirements
-// •	Inserting li elements into the DOM
-// •	There should be an li element for every todo
-// •	Each li element should contain .todoText
-// •	Each li element should show .completed
-// •	Escaping the console
-// •	Review
+// •  Requirements
+// •  Inserting li elements into the DOM
+// •  There should be an li element for every todo
+// •  Each li element should contain .todoText
+// •  Each li element should show .completed
+// •  Escaping the console
+// •  Review
 
 var view = {
-	displayTodos: function(){
-		var todoUl = document.querySelector('ul');
-		todoUl.innerHTML = '';
+  displayTodos: function(){
+    var todoUl = document.querySelector('ul');
+    todoUl.innerHTML = '';
 
-		for(var i = 0; i < todoList.todos.length;i++) {
-			var todoTextWithCompletion = '';
-			var todo = todoList.todos[i];
+    for(var i = 0; i < todoList.todos.length;i++) {
+      var todoTextWithCompletion = '';
+      var todo = todoList.todos[i];
 
-			if(todo.completed === true){
-				todoTextWithCompletion = '( * )' + todo.todoText;
-			} else {
-				todoTextWithCompletion = '(  )' + todo.todoText;
-			}
+      if(todo.completed === true){
+        todoTextWithCompletion = '( * )' + todo.todoText;
+      } else {
+        todoTextWithCompletion = '(  )' + todo.todoText;
+      }
 // Inserting li elements into the DOM
-			var todoLi = document.createElement('li');
+      var todoLi = document.createElement('li');
       todoLi.id = i;
-			todoLi.textContent = todoTextWithCompletion;
-			todoLi.appendChild(this.createDeleteButton() );
-			todoUl.appendChild(todoLi);
-		}
-		
-		},
-		createDeleteButton: function() {
-			var deleteButton = document.createElement('button');
-			deleteButton.textContent = 'Delete';
-			deleteButton.className = 'deleteButton';
-			return deleteButton;
-	},
+      todoLi.textContent = todoTextWithCompletion;
+      todoLi.appendChild(this.createDeleteButton() );
+      todoUl.appendChild(todoLi);
+    }
+    
+    },
+    createDeleteButton: function() {
+      var deleteButton = document.createElement('button');
+      deleteButton.textContent = 'Delete';
+      deleteButton.className = 'deleteButton';
+      return deleteButton;
+  },
   //declaring eventListener on Ul instead of each li saves from
   //memory related issues bacause there is a lot of eventListeners
 
     logEvents: function(){
       var todoUl = document.querySelector('ul');
       todoUl.addEventListener('click',function(event){
+        var elementClicked = event.target;
+        if (elementClicked.className === 'deleteButton') {
+            handlers.deleteTodos(parseInt(elementClicked.parentNode.id) );
+        }
       //console.log(event.target.parentNode.id);id which is a string value
-      handlers.deleteTodos(parseInt(event.target.parentNode.id) );
     })
   }
 };
 view.logEvents();
+
+ </script>
+</body>
+</html>
 
 
 
